--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
     "@types/react-modal": "^3.16.3",
+    "axios": "^1.6.8",
     "book-cover-3d": "^1.1.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://192.168.0.4:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
