--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://192.168.0.80:8080",
+  "homepage": "https://libraryif.vercel.app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
