--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_NAVER_CLIENT_ID = z8DWhv_7m4llE7vbduqG
+  NAVER_DEV_APP_CLIENT_ID=Smcbfw_WXTXz1O5VFd2N
+  NAVER_DEV_APP_CLIENT_SECRET=y7zyxyxeMD
+  OAUTH2_NAVER_REDIRECT_URI=http://localhost:8080/login/oauth2/code/naver
