--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-speech-recognition": "^3.9.5"
   }
 }
