--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "http:// 172.30.1.20:8080",
   "homepage": "https://libraryif.vercel.app",
   "scripts": {
     "start": "react-scripts start",
